# dispatch-channel-whatsapp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  channel-plugin.json
.github/workflows/: ci.yml  release.yml
src/: deliver.rs  ingress.rs  link.rs  main.rs  protocol.rs  session.rs  status.rs  store.rs
