[package]
name = "channel-whatsapp"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Dispatch channel plugin for WhatsApp via native Rust whatsapp-rust."
repository = "https://github.com/serenorg/dispatch-channel-whatsapp"
keywords = ["dispatch", "channel", "whatsapp", "agents"]
categories = ["command-line-utilities"]

[[bin]]
name = "channel-whatsapp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", tag = "v0.3.0" }
futures = "0.3"
jiff = "0.2"
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
url = "2"
whatsapp-rust = { version = "0.5", default-features = false, features = ["sqlite-storage", "tokio-transport", "tokio-runtime", "ureq-client", "tokio-native", "signal"] }
whatsapp-rust-sqlite-storage = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"
